-----------------------------
 Change history for MATPOWER
-----------------------------

Version:    5.0b1

maintained by Ray Zimmerman <rz10@cornell.edu>

MATPOWER
$Id$
Copyright (c) 1996-2014 by Power System Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.


Changes since 5.0b1
-------------------

11/12/14
    - Loads at isolated buses are no longer included in results from
      total_load().
    - Fixed loads and shunts at isolated buses are no longer included
      in system and area summaries in printpf(). Line charging
      injections set to zero for DC power flow results.
    - Added tests for printpf() in t_printpf.m.
    - Changes to the internally indexed version of gencost now
      get properly copied back to externally indexed version by
      int2ext().
    - Added tests in t_ext2int2ext() to confirm that e2i_data/field()
      and i2e_data/field() work for cell array as well as numerical
      array fields. Updated help text to reflect this feature.

11/11/14
    - Added get_losses() function to compute losses, line charging
      reactive injections and their derivatives, as functions of
      bus voltages. Corresponding tests included in t_get_losses(),
      including example of loss sensitivity factors.
    - Fixed bug in runpf.m that caused a crash for cases with
      pf.enforce_q_lims turned on and exactly two Q limit violations,
      one Qmax and one Qmin. Thanks to Jose Luis Marin.

11/4/14
    - Modified behavior so setting out.all option to 0 is now ignored
      for pretty-printed output to files specified as FNAME argument
      to runpf(), runopf(), etc.

10/22/14
    - Removed idx_area() and all code references to 'areas' field
      in MATPOWER cases except those needed to support reading
      v1 case files and those required for backward compatibility of
      APIs. Removed unused (and formerly deprecated) 'areas' field from
      version 2 case files that still included it.
